# Software

./: .gitignore  .gitmodules  CNAME  README.md
Definitions/: Actuator  BaseEntity  BasePart  Motor  Robot
MatlabAnalysis/: PrelimBattSizing.m
RaspberryPI/: README.md  blink.c  makefile  serial_test.c  serial_test2.c
arduino code/Roboclaw/: RoboClaw.cpp  RoboClaw.h
arduino code/Roboclaw/examples/PacketSerialSimplePWM/: RoboClaw.cpp
arduino code/Roboclaw/first_test/: first_test.ino
arduino code/sabertoothDriver/: sabertoothDriver.ino
arduino code/sabertoothDriver/ino/src/: sabertoothDriver.ino
commandcenter/: commandCenter (copy).html  commandCenter.html  index.html  keyboardteleop.js  launch_commandcenter.sh  roslib.js
devel/: .catkin  .rosinstall  setup.sh
ros/devel/: .catkin  .rosinstall  setup.sh
ros/devel/include/rtabmap_ros/: GPS.h  Goal.h  (+23 more)
ros/kinect_V1/: package.xml
ros/launch/: core.launch
ros/robot_config/: .setup_assistant
ros/robot_config/config/: joint_limits.yaml  visual.srdf
ros/robot_config/launch/: gazebo.launch  move_group.launch  planning_context.launch  trajectory_execution.launch.xml
ros/src/: imu_data.csv  imutest.py  myrobot.urdf
ros/src/arm_control/: CMakeLists.txt  arm_hw_plugin.xml  package.xml
ros/src/command_vel/: CMakeLists.txt  package.xml
ros/src/command_vel/src/: command_vel.cpp  main_control.cpp
ros/src/commandcenter/: CMakeLists.txt  commandCenter.html  keyboardteleop.js  launch_commandcenter.sh  package.xml
ros/src/current_sensing/: 30A_current_sensor.py  CMakeLists.txt  VoltageInput.py  battery_current.py  package.xml  phidgets_sensors.py  voltage_input.py
ros/src/image_converter/: CMakeLists.txt  package.xml
ros/src/image_converter/src/: image_converter_node.cpp
ros/src/joint_position_controller/: CMakeLists.txt  package.xml
ros/src/kinect_V1/: CMakeLists.txt
ros/src/launch_files/: CMakeLists.txt  autonomous_launch.launch  drivers.launch  package.xml  tele_launch_files.launch
ros/src/locomotion_startup/: CMakeLists.txt  package.xml
ros/src/locomotion_startup/launch/: loco.launch
ros/src/locomotion_startup/src/: startup_locomotion.cpp
ros/src/odrive_ros/: CMakeLists.txt  Motor_Labels.txt  Motor_Tuning_Commands.txt  package.xml
ros/src/overseer/: CMakeLists.txt  overseer_node.py  package.xml
ros/src/robot_config/: .setup_assistant  package.xml
ros/src/robot_setup_tf/: package.xml
ros/src/robot_tf/: CMakeLists.txt  package.xml
ros/src/teleop/: package.xml  teleop.py  teleopXbox.py  xbtest.py
scripts/: initRobot.sh  openni.sh  rosnetsetup.sh  start_up.sh  udooSetupScript.sh
src/: new_key_teleop.py
src/beginner_tutorials/: package.xml
src/mybot_control/: CMakeLists.txt
src/mybot_control/launch/: myrobot_control.launch
src/mybot_description/meshes/: hokuyo.dae
src/mybot_description/urdf/: mybot.gazebo  mybot_xacro
(+80 files in other folders)
